--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nanibari Travel</title>
+    <title>Hero Travel</title>
     <link rel="stylesheet" href="styles/travel.css">
 </head>
 <body>
@@ -50,7 +50,7 @@
         <section class="our-tour">
           <div class="popular-tour">
             <h3 class="tour-title">Our Popular Tours</h3>
-            <p class="tour-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <p class="tour-description">Experience the famous national park - Phang Nga Bay on a luxury cruise equipped with a full bar, day beds, DJ, and dance floor. Visit James Bond Island and explore the sea caves of Hong Island by .</p>
             <ol>
                 <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
                 <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
@@ -68,7 +68,7 @@
         <section>
             <div class="destination-title-container">
                 <h3 class="destination-title">Choose Your Destination</h3>
-                <p class="destination-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="destination-description">It is not the destination where you end up but the mishaps and memories you create along the way.</p>
             </div>
             <div class="destination-pic">
                   <img class="img-desti" src="Images/Rectangle 5.png" alt="">           
@@ -86,7 +86,7 @@
         <section>
             <div class="choose-title-container">
                 <h3 class="choose-title">Why Choose Us</h3>
-                <p class="title-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="title-description">We can take care of travel arrangements like visa processing, hotel bookings, transportation to the airport, and travel insurance..</p>
             </div>
             <div class="card-container">
                 <div class="card">
@@ -132,7 +132,7 @@
             <img src="Images/Group 40071 (2).png" alt="">
             <h3 class="title" >Hero <span>Travel</span></h3>
         </div>
-        <p class="footer-text">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <p class="footer-text">Discover and experience iconic destinations in Phuket with our extraordinarily boats, excellent services and pleasurable food. </p>
         <img src="Images/Social.png" alt="">
         <hr>
         <p class="copy">2024, All Rights Reserved.</p>
