--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start -->
     <header>
         
-        <div class="title-container">
+        <div class="title-container"> 
             <div class="logo">
                 <img class="title-logo" src="Images/Group 40071 (2).png" alt="">
                 <h3 class="title">Hero <span>Travel</span></h3>
@@ -37,9 +37,9 @@
              <p class="explore-description">Travel makes you richer: This quote means that the experience of traveling is more valuable than material possessions</p>
             </div>
             <div class="explore-input">
-                <input class="exp-input" type="search" name="" id="">
-                <input class="exp-input" type="search" name="" id="">
-                <input class="exp-input" type="search" name="" id="">
+                <input class="exp-input" placeholder="Where go" type="search" name="" id="">
+                <input class="exp-input" placeholder="When" type="search" name="" id="">
+                <input class="exp-input" placeholder="Select Type" type="search" name="" id="">
                 
                 <button class="btn-exp">Find Now</button>
             </div>
