--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
             <h3 class="tour-title">Our Popular Tours</h3>
             <p class="tour-description">Experience the famous national park - Phang Nga Bay on a luxury cruise equipped with a full bar, day beds, DJ, and dance floor. Visit James Bond Island and explore the sea caves of Hong Island by .</p>
             <ol>
-                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <li>Scenic Retreats: Indulge in the serenity of nature with Our Popular Tours. From majestic mountains to pristine beaches .</li>
+                <li>City Escapes: Uncover the charm of bustling cities with Our Popular Tours. Discover iconic landmarks and trendy.</li>
+                <li> Family-Friendly Trips: Create lasting memories with family-friendly tours by Our Popular Tours. Tailored activities for all ages.</li>
             </ol>
-            <p class="tour-description">Amet consectetur. Vulputate commodo felis molestie risus 
-                ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+            <p class="tour-description">No matter your travel style, Our Popular Tours offer a diverse array of experiences, ensuring that every journey is unique and memorable. </p>
                 <button class="btn-tour">Read More</button>
           </div>
           <div class="tour-pic">
@@ -92,19 +91,20 @@
                 <div class="card">
                     <img class="card-pic" src="Images/hotel 1.png" alt="">
                     <h3 class="card-title">Handpicked Hotels</h3>
-                    <p class="card-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+                    <p class="card-des">Introducing our Hand-Picked Hotel collection, where every stay is a masterpiece of luxury and comfort. We meticulously select each hotel to ensure an unparalleled experience for our guests. 
                     </p>
                 </div>
                 <div class="card card2">
                     <img class="card-pic" src="Images/map 1.png" alt="">
                     <h3 class="card-title">World Class Service</h3>
-                    <p class="card-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+                    <p class="card-des">
+                        Welcome to Our World-Class Service, where excellence is our standard. From attentive customer care to seamless experiences, we redefine hospitality. 
                     </p>
                 </div>
                 <div class="card card3">
                     <img class="card-pic" src="Images/price-tag 1.png" alt="">
                     <h3 class="card-title">Best Price Guarantee</h3>
-                    <p class="card-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+                    <p class="card-des">Experience peace of mind with Our Best Price Guarantee. We ensure you receive the most competitive rates, affirming our commitment to affordability without compromising quality. Book confidently and enjoy the best value for your unforgettable journey. 
                     </p>
                 </div>
             </div>
